Bind whitelist to modules api
